jsat/jsat-main.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jsat-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsat-main
  template:
    metadata:
      labels:
        app: jsat-main
        role: jsat-main-tomcat
    spec:
      containers:
      - name: jsat-main
        image: telpin-jsat-main
        imagePullPolicy: Never # Importante para usar registry local
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: docs-pvc
          mountPath: "/var/docs"
  volumeClaimTemplates:
  - metadata:
      name: docs-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: jsat-main
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: jsat-main-tomcat
