jsat/jsat-ov.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsat-ov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsat-ov
  template:
    metadata:
      labels:
        app: jsat-ov
        role: jsat-ov-tomcat
    spec:
      containers:
      - name: jsat-ov
        image: telpin-jsat-ov
        imagePullPolicy: Never # Importante para usar registry local
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jsat-ov
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: jsat-ov-tomcat
